[package]
name = "jito-sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
serde = "1.0.209"
bincode = "1.3.3"
bs58 = "0.4.0"
rand = "0.8"

# Remove the [[example]] section if it exists

[dev-dependencies]
base64 = "0.21.0"
solana-client = "1.16"
solana-sdk = "1.16"
